--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<img src="logo.png" class="logo">
 		<h3 >See what is happening right now</h3>
 
-		<h4 >Join Family Chat today</h4>
+		<h4 >Join Friends Chat today</h4>
 		
 		<div class="form-group">
 		  <label >User Name:</label>
